[package]
name = "game-prototype"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@cock.li>"]
edition = "2018"

[profile.dev]
debug = 0
opt-level = 2

[dependencies]
ggez = "0.5.1" # A lightweight game framework for making 2D games with minimum friction, inspired by Love2D.
rand = "0.7.3" # Random number generators and other randomness functionality.
